fix: 제목 포맷 수정

--- a/_posts/grpc/2025-12-28-http2.md
+++ b/_posts/grpc/2025-12-28-http2.md
@@ -1,5 +1,5 @@
 ---
-title: "HTTP/2 프로토콜"
+title: "[gRPC 기반기술 4] HTTP/2 프로토콜"
 date: 2025-12-28 19:00:00 +0900
 categories: [Tech, gRPC]
 tags: [http2, protocol, network, grpc]
