--- a/_posts/grpc/2025-12-28-protobuf.md
+++ b/_posts/grpc/2025-12-28-protobuf.md
@@ -1,5 +1,5 @@
 ---
-title: "Protocol Buffers (Protobuf)"
+title: "[gRPC 기반기술 3] Protocol Buffers (Protobuf)"
 date: 2025-12-28 18:00:00 +0900
 categories: [Tech, gRPC]
 tags: [protobuf, protocol-buffers, serialization, grpc]
